bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:3: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if ((temp1 <= 0 && temp2 >= 0) || /*(temp2 <= 0 && temp1 >= 0)*/) {
                                 ^